--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -21,13 +21,15 @@
   cursor: pointer;
   display: flex;
   align-items: center;
-  border-radius: 7.5px;
+  border-radius: 5px;
+  font-size: 1.125rem;
+  margin-bottom: .25rem;
 }
 .sidebarListItem.active,
 .sidebarListItem:hover {
-  background-color: rgb(240, 240, 255);
+  background-color: rgb(235, 235, 255);
 }
 .sidebarIcon{
     margin-right: 5px;
-    font-size: 40px !important;
+    font-size: 45px !important;
 }
