--- a/src/pages/newuser/newuser.css
+++ b/src/pages/newuser/newuser.css
@@ -1,12 +1,19 @@
 .newUser {
-  flex: 4;
+  margin-top: 50px;
+  width: 80vw;
+  text-align: center;
 }
-
+.newUserTitle {
+  font-size: 2.75rem;
+}
 .newUserForm {
+  position: relative;
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
+  margin-top: .5rem;
 }
-
 .newUserItem {
   width: 400px;
   display: flex;
@@ -14,44 +21,37 @@
   margin-top: 10px;
   margin-right: 20px;
 }
-
 .newUserItem > label {
+  align-self: flex-start;
   margin-bottom: 10px;
   font-size: 14px;
   font-weight: 600;
   color: rgb(151, 150, 150);
 }
-
 .newUserItem > input {
-  height: 20px;
+  height: 40px;
   padding: 10px;
+  margin-bottom: 10px;
   border: 1px solid gray;
   border-radius: 5px;
 }
-
-.newUserGender > input {
-  margin-top: 15px;
+.newUserGender > label {
+  margin: 0 10px;
+  font-size: 18px;
+  color: #555;
+  margin-right: 50px;
 }
-
-.newUserGender>label{
-    margin: 10px;
-    font-size: 18px;
-    color: #555;
-}
-
-.newUserSelect{
-    height: 40px;
-    border-radius: 5px;
-}
-
-.newUserButton{
-    width: 200px;
-    border: none;
-    background-color: darkblue;
-    color: white;
-    padding: 7px 10px;
-    font-weight: 600;
-    border-radius: 10px;
-    margin-top: 30px;
-    cursor: pointer;
+.newUserButton {
+  position: absolute;
+  bottom: -3.5rem;
+  width: 115px;
+  border: none;
+  background-color: darkblue;
+  color: white;
+  padding: 10px;
+  font-size: 1rem;
+  font-weight: 600;
+  border-radius: 10px;
+  margin-top: 30px;
+  cursor: pointer;
 }
