--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -9,6 +9,10 @@
 .sidebarWrapper {
   padding: 20px;
   color: #555;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 80vh;
 }
 .sidebarMenu {
   margin-bottom: 10px;
@@ -42,4 +46,20 @@
 .siebarTitleWrapper h1 {
   font-size: 1.8rem;
   font-weight: 900;
+}
+.logoutButton {
+  align-self: center;
+  width: 85%;
+  border: none;
+  background-color: #252525;
+  color: white;
+  padding: 14px;
+  font-size: 1rem;
+  font-weight: 600;
+  border-radius: 5px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+.logoutButton:hover {
+  background-color: black;
 }
