--- a/src/pages/newproduct/newproduct.css
+++ b/src/pages/newproduct/newproduct.css
@@ -1,34 +1,62 @@
 .newProduct {
-  margin-top: 50px;
+  margin-top: -50px;
   width: 80vw;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 .addProductForm {
-  margin-top: 10px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 1rem;
 }
 .addProductItem {
-  width: 250px;
+  width: 400px;
   display: flex;
   flex-direction: column;
-  margin-bottom: 10px;
+  margin-right: 20px;
 }
 .addProductItem > label {
-  color: gray;
-  font-weight: 600;
+  align-self: flex-start;
   margin-bottom: 10px;
+  font-size: 16px;
+  font-weight: 600;
+  color: rgb(86, 86, 86);
 }
 .addProductItem > input {
+  height: 50px;
   padding: 10px;
+  margin-bottom: 10px;
+  font-size: 1rem;
+  border: 1px solid gray;
+  border-radius: 5px;
 }
 .addProductItem > select {
+  height: 50px;
   padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid gray;
+  border-radius: 5px;
 }
 .addProductButton {
-  margin-top: 10px;
-  padding: 7px 10px;
+  position: absolute;
+  bottom: -4rem;
+  width: 115px;
   border: none;
-  border-radius: 10px;
-  background-color: darkblue;
+  background-color: teal;
   color: white;
+  padding: 10px;
+  font-size: 1.125rem;
   font-weight: 600;
+  border-radius: 7.5px;
+  margin-top: 30px;
   cursor: pointer;
+}
+.addProductTitle {
+  font-size: 2.75rem;
 }
