--- a/src/pages/newuser/newuser.css
+++ b/src/pages/newuser/newuser.css
@@ -1,7 +1,11 @@
 .newUser {
-  margin-top: 50px;
+  margin-top: -100px;
   width: 80vw;
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 .newUserTitle {
   font-size: 2.75rem;
@@ -11,29 +15,29 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
-  margin-top: .5rem;
+  flex-direction: column;
+  margin-top: 1rem;
 }
 .newUserItem {
   width: 400px;
   display: flex;
   flex-direction: column;
-  margin-top: 10px;
   margin-right: 20px;
 }
 .newUserItem > label {
   align-self: flex-start;
   margin-bottom: 10px;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 600;
-  color: rgb(151, 150, 150);
+  color: rgb(86, 86, 86);
 }
 .newUserItem > input {
-  height: 40px;
+  height: 50px;
   padding: 10px;
   margin-bottom: 10px;
   border: 1px solid gray;
   border-radius: 5px;
+  font-size: 1rem;
 }
 .newUserGender > label {
   margin: 0 10px;
@@ -43,15 +47,15 @@
 }
 .newUserButton {
   position: absolute;
-  bottom: -3.5rem;
+  bottom: -4rem;
   width: 115px;
   border: none;
-  background-color: darkblue;
+  background-color: teal;
   color: white;
   padding: 10px;
-  font-size: 1rem;
+  font-size: 1.125rem;
   font-weight: 600;
-  border-radius: 10px;
+  border-radius: 7.5px;
   margin-top: 30px;
   cursor: pointer;
 }
