--- a/src/pages/userlist/userlist.css
+++ b/src/pages/userlist/userlist.css
@@ -14,15 +14,19 @@
   margin-right: 10px;
 }
 .userListEdit {
-    border: none;
-    border-radius: 10px;
-    padding: 5px 10px;
-    background-color: #3bb077;
-    color: white;
-    cursor: pointer;
-    margin-right: 20px;
+  border: none;
+  font-size: .9rem;
+  border-radius: 5px;
+  padding: 7px 12.5px;
+  background-color: teal;
+  color: white;
+  cursor: pointer;
+  width: 4.5rem;
+  margin-left: 10px;
+  margin-right: 80px;
 }
 .userListDelete {
-    color: red;
-    cursor: pointer;
+  color: red;
+  cursor: pointer;
+  font-size: 34.5px !important;
 }
