finished with admin, one bug

--- a/src/pages/productlist/productlist.css
+++ b/src/pages/productlist/productlist.css
@@ -5,6 +5,8 @@
 .productListItem {
     display: flex;
     align-items: center;
+    font-size: 1.2rem;
+    font-weight: 500;
 }
 .productListImg  {
     width: 32px;
