--- a/src/pages/newproduct/newproduct.css
+++ b/src/pages/newproduct/newproduct.css
@@ -57,6 +57,24 @@
   margin-top: 30px;
   cursor: pointer;
 }
+#loadingNewProduct {
+  position: absolute;
+  align-self: center;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  border: 6px solid rgba(0,0,0,.3);
+  border-radius: 50%;
+  border-top-color: teal;
+  animation: spin 1s ease-in-out infinite;
+  -webkit-animation: spin 1s ease-in-out infinite;
+  margin-top: -2.5rem;
+  margin-bottom: -2.5rem;
+}
+.addProductButton.lighter {
+  background-color: gray;
+  cursor: not-allowed;
+}
 .addProductTitle {
   font-size: 2.75rem;
 }
