--- a/src/pages/newuser/newuser.css
+++ b/src/pages/newuser/newuser.css
@@ -59,3 +59,27 @@
   margin-top: 30px;
   cursor: pointer;
 }
+#loadingNewUser {
+  position: absolute;
+  align-self: center;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  border: 6px solid rgba(0,0,0,.3);
+  border-radius: 50%;
+  border-top-color: teal;
+  animation: spin 1s ease-in-out infinite;
+  -webkit-animation: spin 1s ease-in-out infinite;
+  margin-top: -2.5rem;
+  margin-bottom: -2.5rem;
+}
+.newUserItem.lighter {
+  opacity: .5;
+}
+.addProductItem.lighter {
+  opacity: .5;
+}
+.newUserButton.lighter {
+  background-color: gray;
+  cursor: not-allowed;
+}
