--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -27,7 +27,7 @@
   cursor: pointer;
 }
 .productBottom {
-  width: 60%;
+  width: 50%;
   padding: 20px;
   margin: 20px;
   box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
@@ -44,15 +44,15 @@
 }
 .productFormLeft > label {
   margin-bottom: 5px;
-  color: black;
-  font-weight: 400;
-  font-size: 1.085rem;
+  color: #222;
+  font-weight: 600;
+  font-size: 1.125rem;
 }
 .productFormLeft > input {
   margin-bottom: 22.5px;
   border: none;
   padding: 5px;
-  font-size: .9rem;
+  font-size: 1rem;
   width: 15rem;
   border-bottom: 1px solid black;
 }
@@ -61,8 +61,8 @@
   height: 25px;
 }
 .productUploadImg {
-  width: 150px;
-  height: 150px;
+  width: 175px;
+  height: 175px;
   border-radius: 5px;
   object-fit: cover;
   margin-right: 20px;
@@ -76,9 +76,14 @@
 .productUpload {
   display: flex;
   align-items: center;
+  flex-direction: column;
 }
 .productUpload > label {
   cursor: pointer;
+}
+.productUpload > input {
+  margin-top: .75rem;
+  width: 12rem;
 }
 .productButton {
   border: none;
@@ -89,4 +94,33 @@
   font-size: .85rem;
   font-weight: 600;
   cursor: pointer;
+}
+#loading {
+  align-self: center;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  border: 6px solid rgba(0,0,0,.3);
+  border-radius: 50%;
+  border-top-color: teal;
+  animation: spin 1s ease-in-out infinite;
+  -webkit-animation: spin 1s ease-in-out infinite;
+  margin-top: -2.5rem;
+  margin-bottom: -2.5rem;
+}
+.productFormLeft.lighter {
+  opacity: .5;
+}
+.productUpload.lighter {
+  opacity: .5;
+}
+.productButton.lighter {
+  background-color: #555;
+  cursor: not-allowed;
+}
+@keyframes spin {
+  to { -webkit-transform: rotate(360deg); }
+}
+@-webkit-keyframes spin {
+  to { -webkit-transform: rotate(360deg); }
 }
